fix(wofi): fix wofi/style.css comments

--- a/wofi/style.css
+++ b/wofi/style.css
@@ -1,5 +1,5 @@
-# ~/.config/wofi/style.css
-# Inspired by fufexan/dotfiles
+/* ~/.config/wofi/style.css
+Inspired by fufexan/dotfiles */
 
 window {
   background: unset;
