feat(eww): adjust eww bar

--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -22,8 +22,7 @@
 }
 
 .bar {
-  border-radius: 5px;
-  background-color: $background;
+  background-color: #000000;
   color: $foreground;
 
   label {
